--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,14 @@
 # Anthropic API Key (required)
 # Get yours at: https://console.anthropic.com/
-ANTHROPIC_API_KEY=sk-ant-api03-your-key-here
+ANTHROPIC_API_KEY=sk-ant...usQAA
 
 # HubSpot Private App Token (optional - for contact sync)
 # Create at: https://app.hubspot.com/private-apps/
 HUBSPOT_ACCESS_TOKEN=pat-na1-your-token-here
+
+# Firecrawl API Key (optional - for web crawling)
+FIRECRAWL_API_KEY=fc-6797...
+
+# Anysite MCP Configuration (required for Anysite integration)
+Anysite MCP Key=eyJh...
+MCP_SERVER_URL=https://mcp.anysite.io/mcp
