feat(api): add Anysite MCP integration and Firecrawl API handler
- Implemented Anysite MCP integration for LinkedIn data extraction with actions for company posts, person posts, and ICP search.
- Added a utility to generate Anysite query strings for manual use.
- Created Firecrawl API handler to scrape, crawl, and map URLs with customizable options.

--- a/.env.example
+++ b/.env.example
@@ -1,14 +1,16 @@
 # Anthropic API Key (required)
 # Get yours at: https://console.anthropic.com/
-ANTHROPIC_API_KEY=sk-ant...usQAA
+ANTHROPIC_API_KEY=sk-ant-your-key-here
 
-# HubSpot Private App Token (optional - for contact sync)
+# HubSpot Private App Token (required - for CRM sync)
 # Create at: https://app.hubspot.com/private-apps/
 HUBSPOT_ACCESS_TOKEN=pat-na1-your-token-here
 
-# Firecrawl API Key (optional - for web crawling)
-FIRECRAWL_API_KEY=fc-6797...
+# Firecrawl API Key (required - for web content extraction)
+# Get yours at: https://firecrawl.dev/
+FIRECRAWL_API_KEY=fc-your-key-here
 
-# Anysite MCP Configuration (required for Anysite integration)
-Anysite MCP Key=eyJh...
-MCP_SERVER_URL=https://mcp.anysite.io/mcp
+# Anysite MCP Configuration (required - for LinkedIn data)
+# Get yours at: https://anysite.io/
+ANYSITE_MCP_KEY=eyJh-your-jwt-token-here
+ANYSITE_MCP_URL=https://mcp.anysite.io/mcp
